--- a/index.html
+++ b/index.html
@@ -15,13 +15,115 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&display=swap"
         rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
+    <div class="container">
+        <header>
+            <h1>giallo booleano</h1>
+        </header>
+        <main>
+            <!-- CAKE SECTION -->
+            <section class="cake">
+                <div class="column">
+                    <div class="col">
+                        <div class="card row">
+                            <!-- Card Title -->
+                            <div id="card-title">
+                                <h3>dolci e desserts</h3>
+                                <h2>Tiramisù <span>(Dolce Tradizionale)</span></h2>
+                            </div>
+                            <!-- Card rating -->
+                            <div id="card-rating">
+                                <span><i class="fa-solid fa-star"> </i><b>4.6</b>/5</span><button>rate</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <!-- video recipe -->
+                            <div id="card-video"><iframe width="536" height="315"
+                                    src="https://www.youtube.com/embed/JVT900H6s0g?si=nmL8UM2KoH_EBuzJ"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </div>
+                            <!-- kcal -->
+                            <div class="kcal">
+                                <div class="kcal-container column">
+                                    <div class="row">
+                                        <span id="text-kcal">544 kcal</span>
+                                        <a href="#" id="info-kcal">+ info</a>
+                                    </div>
+                                    <div class="b-border"></div>
+                                    <div class="row">
+                                        <span class="type"><i class="fa-solid fa-carrot"></i>vegetariano</span>
+                                    </div>
+                                </div>
+                                <!-- Recipe -->
+                                <div class="recipe">
+                                    <ul>
+                                        <li><i class="fa-solid fa-blender"></i>Difficoltà: <b>Facile</b></li>
+                                        <li><i class="fa-solid fa-clock"></i>Tempo: <b>40 min</b></li>
+                                        <li><i class="fa-solid fa-chart-pie"></i>Porzione per: <b>8 persone</b></li>
+                                        <li><i class="fa-solid fa-euro-sign"></i>Costo: <b>contenuto</b></li>
+                                        <li><i class="fa-solid fa-book"></i>Note: <b>+2 ore di riposo in frigo</b></li>
+                                    </ul>
+                                </div>
+                            </div>
 
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+            <!-- SOCIAL LINKS -->
+            <div class="social-links col row">
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+            <!-- PRESENTATION SECTION -->
+            <section class="presentation col">
+                <div class="presentation-title">
+                    <h3>presentation</h3>
+                    <div class="sm-b-border"></div>
+                </div>
+                <div class="presentation-text">
+                    <img src="img/tiramisu.jpg" alt="Tiramisù">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime veritatis obcaecati neque?
+                        <b>Corporis</b>, laudantium quas. Aliquid sunt magni sapiente, fugit laboriosam expedita ipsam
+                        vitae
+                        dolorem delectus id, pariatur, corporis deleniti.Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. <b>Maxime veritatis</b> obcaecati neque?
+                        Corporis, laudantium quas. Aliquid sunt magni sapiente, fugit laboriosam expedita ipsam vitae
+                        dolorem delectus id, pariatur, corporis deleniti.
+                    </p>
+                </div>
+            </section>
+            <footer>
+                <address>
+                    <h4>© 2024 Giallo Booleano S.p.a.</h4>
+                    <p>Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</p>
+                    <div class="address-footer row">
+                        <a href="">About us</a>
+                        <a href="">Term of use</a>
+                        <a href="">Privacy Policy</a>
+                        <a href="">Cookie Policy</a>
+                        <a href="">Disclaimer</a>
+                    </div>
+                </address>
+            </footer>
+        </main>
+    </div>
 </body>
 
 </html>
