added tablet responsive

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="col">
                         <div class="card">
                             <!-- video recipe -->
-                            <div id="card-video"><iframe width="536" height="315"
+                            <div id="card-video"><iframe width="100%" height="315"
                                     src="https://www.youtube.com/embed/JVT900H6s0g?si=nmL8UM2KoH_EBuzJ"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -69,9 +69,11 @@
                                 <!-- Recipe -->
                                 <div class="recipe">
                                     <ul>
-                                        <li><i class="fa-solid fa-blender"></i>Difficoltà: <b>Facile</b></li>
+                                        <li><i class="fa-solid fa-blender"></i>Difficoltà: <b>Facile</b>
+                                        </li>
                                         <li><i class="fa-solid fa-clock"></i>Tempo: <b>40 min</b></li>
-                                        <li><i class="fa-solid fa-chart-pie"></i>Porzione per: <b>8 persone</b></li>
+                                        <li><i class="fa-solid fa-chart-pie"></i>Porzione per: <b>8
+                                                persone</b></li>
                                         <li><i class="fa-solid fa-euro-sign"></i>Costo: <b>contenuto</b></li>
                                         <li><i class="fa-solid fa-book"></i>Note: <b>+2 ore di riposo in frigo</b></li>
                                     </ul>
@@ -91,6 +93,7 @@
                 <a href="#"><i class="fa-brands fa-pinterest"></i></a>
                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
             </div>
+            <div class="sponsor col"><img src="img/banner.png" alt="banner"></div>
             <!-- PRESENTATION SECTION -->
             <section class="presentation col">
                 <div class="presentation-title">
