esercizio finito con bonus

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 </head>
 
 <body>
+    <header>
+        <h1>giallo booleano</h1>
+    </header>
     <div class="container">
-        <header>
-            <h1>giallo booleano</h1>
-        </header>
         <main>
             <!-- CAKE SECTION -->
             <section class="cake">
-                <div class="column">
+                <div class="cake-container column">
                     <div class="col">
                         <div class="card row">
                             <!-- Card Title -->
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="tiramisu-col col">
                         <div class="card">
                             <!-- video recipe -->
                             <div id="card-video"><iframe width="100%" height="315"
@@ -87,11 +87,11 @@
             </section>
             <!-- SOCIAL LINKS -->
             <div class="social-links col row">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-pinterest"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i><span>Facebook</span></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i><span>Twitter</span></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i><span>Instagram</span></a>
+                <a href="#"><i class="fa-brands fa-pinterest"></i><span>Pintarest</span></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i><span>Youtube</span></a>
             </div>
             <div class="sponsor col"><img src="img/banner.png" alt="banner"></div>
             <!-- PRESENTATION SECTION -->
@@ -112,21 +112,25 @@
                     </p>
                 </div>
             </section>
-            <footer>
-                <address>
+    </div>
+    <footer>
+        <address>
+            <div class="footer-container containter">
+                <div class="author-footer">
                     <h4>© 2024 Giallo Booleano S.p.a.</h4>
                     <p>Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</p>
-                    <div class="address-footer row">
-                        <a href="">About us</a>
-                        <a href="">Term of use</a>
-                        <a href="">Privacy Policy</a>
-                        <a href="">Cookie Policy</a>
-                        <a href="">Disclaimer</a>
-                    </div>
-                </address>
-            </footer>
-        </main>
-    </div>
+                </div>
+                <div class="address-footer row">
+                    <a href="">About us</a>
+                    <a href="">Term of use</a>
+                    <a href="">Privacy Policy</a>
+                    <a href="">Cookie Policy</a>
+                    <a href="">Disclaimer</a>
+                </div>
+            </div>
+        </address>
+    </footer>
+    </main>
 </body>
 
 </html>
